--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -12,6 +12,9 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php -r "unlink('composer-setup.php');" \
     && mv composer.phar /usr/local/bin/composer
 
+RUN apt-get install -y unzip
+
+
 # RUN apt-get update \
 #     && apt-get install -y zip unzip vim openssl ca-certificates
 
